plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.0'
}

version = '0.4.1'

ext {
    // SPRING BOOT
    ORG_SPRINGBOOTFRAMEWORK_BOOT_VERSION = '3.2.3'
    SPRING_DEPENDENCY_MANAGEMENT = '1.1.0'

    // TEST
    JUNIT_JUPITER_API_VERSION = '5.8.1'
    JUNIT_JUPITER_ENGINE_VERSION = '5.8.1'
    JUNIT_VERSION = '4.13.2'
    JUPITER_VERSION = '5.8.1'

    // DATA
    FLYWAY_VERSION = '9.21.1'

    // SECURITY
    JJWT_VERSION = '0.11.5'
}

subprojects {
    sourceCompatibility = "17"

    group = 'pl.app'
    version = '0.0.1'

    apply plugin: 'java'

    repositories {
        mavenCentral()
        maven {
            url "https://repo.spring.io/release"
        }
        maven {
            url "https://repository.jboss.org/maven2"
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

repositories {
    mavenCentral()
}
